src/test/ui/specialization-feature-gate-overlap.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `u8`:
  --> $DIR/specialization-feature-gate-overlap.rs:23:1
   |
19 | impl<T> Foo for T {
   | ----------------- first implementation here
...
23 | impl Foo for u8 { //~ ERROR E0119
   | ^^^^^^^^^^^^^^^ conflicting implementation for `u8`

error: aborting due to previous error

